--- a/references.bib
+++ b/references.bib
@@ -14,3 +14,94 @@
   year = {2023},
   url = {https://osf.io/preprints/psyarxiv/293kt/},
   }
+
+@article{wickham2014,
+	title = {Tidy Data},
+	author = {Wickham, Hadley},
+	year = {2014},
+	month = {09},
+	date = {2014-09-12},
+	journal = {Journal of Statistical Software},
+	pages = {1--23},
+	volume = {59},
+	doi = {10.18637/jss.v059.i10},
+	url = {https://doi.org/10.18637/jss.v059.i10},
+	langid = {en}
+}
+
+@article{jun2022,
+	title = {Hypothesis Formalization: Empirical Findings, Software Limitations, and Design Implications},
+	author = {Jun, Eunice and Birchfield, Melissa and De Moura, Nicole and Heer, Jeffrey and Just, {René}},
+	year = {2022},
+	month = {02},
+	date = {2022-02-28},
+	journal = {ACM Transactions on Computer-Human Interaction},
+	pages = {1--28},
+	volume = {29},
+	number = {1},
+	doi = {10.1145/3476980},
+	url = {https://dl.acm.org/doi/10.1145/3476980},
+	langid = {en}
+}
+
+@article{gelman2014,
+	title = {The Statistical Crisis in Science},
+	author = {Gelman, Andrew and Loken, Eric},
+	year = {2014},
+	month = {12},
+	date = {2014-12},
+	journal = {American Scientist},
+	pages = {460--465},
+	volume = {102},
+	number = {6},
+	url = {https://www.proquest.com/docview/1616141998/abstract/5E050DCE82414037PQ/1},
+	note = {Num Pages: 6
+Place: Research Triangle Park, United States
+Publisher: Sigma XI-The Scientific Research Society},
+	langid = {English}
+}
+
+@article{blair2019,
+	title = {Declaring and Diagnosing Research Designs},
+	author = {Blair, Graeme and Cooper, Jasper and Coppock, Alexander and Humphreys, Macartan},
+	year = {2019},
+	month = {08},
+	date = {2019-08},
+	journal = {American Political Science Review},
+	pages = {838--859},
+	volume = {113},
+	number = {3},
+	doi = {10.1017/S0003055419000194},
+	url = {https://www.cambridge.org/core/product/identifier/S0003055419000194/type/journal_article},
+	langid = {en}
+}
+
+@article{bishop2024,
+	title = {When Alternative Analyses of the Same Data Come to Different Conclusions: A Tutorial Using DeclareDesign With a Worked Real-World Example},
+	author = {Bishop, Dorothy V. M. and Hulme, Charles},
+	year = {2024},
+	month = {07},
+	date = {2024-07-01},
+	journal = {Advances in Methods and Practices in Psychological Science},
+	pages = {25152459241267904},
+	volume = {7},
+	number = {3},
+	doi = {10.1177/25152459241267904},
+	url = {https://doi.org/10.1177/25152459241267904},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
+
+@inproceedings{pu2023,
+	title = {CHI '23: CHI Conference on Human Factors in Computing Systems},
+	author = {Pu, Xiaoying and Kay, Matthew},
+	year = {2023},
+	month = {04},
+	date = {2023-04-19},
+	publisher = {ACM},
+	pages = {1--22},
+	doi = {10.1145/3544548.3580837},
+	url = {https://dl.acm.org/doi/10.1145/3544548.3580837},
+	address = {Hamburg Germany},
+	langid = {en}
+}
