--- a/references.bib
+++ b/references.bib
@@ -105,3 +105,79 @@ Publisher: Sigma XI-The Scientific Research Society},
 	address = {Hamburg Germany},
 	langid = {en}
 }
+
+@article{silberzahn2018,
+	title = {Many Analysts, One Data Set: Making Transparent How Variations in Analytic Choices Affect Results},
+	author = {Silberzahn, R. and Uhlmann, E. L. and Martin, D. P. and Anselmi, P. and Aust, F. and Awtrey, E. and {Bahník}, {{\v{S}}.} and Bai, F. and Bannard, C. and Bonnier, E. and Carlsson, R. and Cheung, F. and Christensen, G. and Clay, R. and Craig, M. A. and Dalla Rosa, A. and Dam, L. and Evans, M. H. and Flores Cervantes, I. and Fong, N. and Gamez-Djokic, M. and Glenz, A. and Gordon-McKeon, S. and Heaton, T. J. and Hederos, K. and Heene, M. and Hofelich Mohr, A. J. and {Högden}, F. and Hui, K. and Johannesson, M. and Kalodimos, J. and Kaszubowski, E. and Kennedy, D. M. and Lei, R. and Lindsay, T. A. and Liverani, S. and Madan, C. R. and Molden, D. and Molleman, E. and Morey, R. D. and Mulder, L. B. and Nijstad, B. R. and Pope, N. G. and Pope, B. and Prenoveau, J. M. and Rink, F. and Robusto, E. and Roderique, H. and Sandberg, A. and {Schlüter}, E. and {Schönbrodt}, F. D. and Sherman, M. F. and Sommer, S. A. and Sotak, K. and Spain, S. and {Spörlein}, C. and Stafford, T. and Stefanutti, L. and Tauber, S. and Ullrich, J. and Vianello, M. and Wagenmakers, E.-J. and Witkowiak, M. and Yoon, S. and Nosek, B. A.},
+	year = {2018},
+	month = {09},
+	date = {2018-09-01},
+	journal = {Advances in Methods and Practices in Psychological Science},
+	pages = {337--356},
+	volume = {1},
+	number = {3},
+	doi = {10.1177/2515245917747646},
+	url = {https://doi.org/10.1177/2515245917747646},
+	note = {Publisher: SAGE Publications Inc},
+	langid = {en}
+}
+
+@article{sarstedt2024,
+	title = {Same model, same data, but different outcomes: Evaluating the impact of method choices in structural equation modeling},
+	author = {Sarstedt, Marko and Adler, Susanne J. and Ringle, Christian M. and Cho, Gyeongcheol and Diamantopoulos, Adamantios and Hwang, Heungsun and Liengaard, Benjamin D.},
+	year = {2024},
+	date = {2024},
+	journal = {Journal of Product Innovation Management},
+	pages = {1100--1117},
+	volume = {41},
+	number = {6},
+	doi = {10.1111/jpim.12738},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/jpim.12738},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/jpim.12738},
+	langid = {en}
+}
+
+@article{huntington-klein2021,
+	title = {The influence of hidden researcher decisions in applied microeconomics},
+	author = {Huntington-Klein, Nick and Arenas, Andreu and Beam, Emily and Bertoni, Marco and Bloem, Jeffrey R. and Burli, Pralhad and Chen, Naibin and Grieco, Paul and Ekpe, Godwin and Pugatch, Todd and Saavedra, Martin and Stopnitzky, Yaniv},
+	year = {2021},
+	date = {2021},
+	journal = {Economic Inquiry},
+	pages = {944--960},
+	volume = {59},
+	number = {3},
+	doi = {10.1111/ecin.12992},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecin.12992},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecin.12992},
+	langid = {en}
+}
+
+@article{botvinik-nezer2020,
+	title = {Variability in the analysis of a single neuroimaging dataset by many teams},
+	author = {Botvinik-Nezer, Rotem and Holzmeister, Felix and Camerer, Colin F. and Dreber, Anna and Huber, Juergen and Johannesson, Magnus and Kirchler, Michael and Iwanir, Roni and Mumford, Jeanette A. and Adcock, R. Alison and Avesani, Paolo and Baczkowski, Blazej M. and Bajracharya, Aahana and Bakst, Leah and Ball, Sheryl and Barilari, Marco and Bault, {Nadège} and Beaton, Derek and Beitner, Julia and Benoit, Roland G. and Berkers, Ruud M. W. J. and Bhanji, Jamil P. and Biswal, Bharat B. and Bobadilla-Suarez, Sebastian and Bortolini, Tiago and Bottenhorn, Katherine L. and Bowring, Alexander and Braem, Senne and Brooks, Hayley R. and Brudner, Emily G. and Calderon, Cristian B. and Camilleri, Julia A. and Castrellon, Jaime J. and Cecchetti, Luca and Cieslik, Edna C. and Cole, Zachary J. and Collignon, Olivier and Cox, Robert W. and Cunningham, William A. and Czoschke, Stefan and Dadi, Kamalaker and Davis, Charles P. and Luca, Alberto De and Delgado, Mauricio R. and Demetriou, Lysia and Dennison, Jeffrey B. and Di, Xin and Dickie, Erin W. and Dobryakova, Ekaterina and Donnat, Claire L. and Dukart, Juergen and Duncan, Niall W. and Durnez, Joke and Eed, Amr and Eickhoff, Simon B. and Erhart, Andrew and Fontanesi, Laura and Fricke, G. Matthew and Fu, Shiguang and {Galván}, Adriana and Gau, Remi and Genon, Sarah and Glatard, Tristan and Glerean, Enrico and Goeman, Jelle J. and Golowin, Sergej A. E. and {González-García}, Carlos and Gorgolewski, Krzysztof J. and Grady, Cheryl L. and Green, Mikella A. and Guassi Moreira, {João F.} and Guest, Olivia and Hakimi, Shabnam and Hamilton, J. Paul and Hancock, Roeland and Handjaras, Giacomo and Harry, Bronson B. and Hawco, Colin and Herholz, Peer and Herman, Gabrielle and Heunis, Stephan and Hoffstaedter, Felix and Hogeveen, Jeremy and Holmes, Susan and Hu, Chuan-Peng and Huettel, Scott A. and Hughes, Matthew E. and Iacovella, Vittorio and Iordan, Alexandru D. and Isager, Peder M. and Isik, Ayse I. and Jahn, Andrew and Johnson, Matthew R. and Johnstone, Tom and Joseph, Michael J. E. and Juliano, Anthony C. and Kable, Joseph W. and Kassinopoulos, Michalis and Koba, Cemal and Kong, Xiang-Zhen and Koscik, Timothy R. and Kucukboyaci, Nuri Erkut and Kuhl, Brice A. and Kupek, Sebastian and Laird, Angela R. and Lamm, Claus and Langner, Robert and Lauharatanahirun, Nina and Lee, Hongmi and Lee, Sangil and Leemans, Alexander and Leo, Andrea and Lesage, Elise and Li, Flora and Li, Monica Y. C. and Lim, Phui Cheng and Lintz, Evan N. and Liphardt, Schuyler W. and Losecaat Vermeer, Annabel B. and Love, Bradley C. and Mack, Michael L. and Malpica, Norberto and Marins, Theo and Maumet, Camille and McDonald, Kelsey and McGuire, Joseph T. and Melero, Helena and {Méndez Leal}, Adriana S. and Meyer, Benjamin and Meyer, Kristin N. and Mihai, Glad and Mitsis, Georgios D. and Moll, Jorge and Nielson, Dylan M. and Nilsonne, Gustav and Notter, Michael P. and Olivetti, Emanuele and Onicas, Adrian I. and Papale, Paolo and Patil, Kaustubh R. and Peelle, Jonathan E. and {Pérez}, Alexandre and Pischedda, Doris and Poline, Jean-Baptiste and Prystauka, Yanina and Ray, Shruti and Reuter-Lorenz, Patricia A. and Reynolds, Richard C. and Ricciardi, Emiliano and Rieck, Jenny R. and Rodriguez-Thompson, Anais M. and Romyn, Anthony and Salo, Taylor and Samanez-Larkin, Gregory R. and Sanz-Morales, Emilio and Schlichting, Margaret L. and Schultz, Douglas H. and Shen, Qiang and Sheridan, Margaret A. and Silvers, Jennifer A. and Skagerlund, Kenny and Smith, Alec and Smith, David V. and Sokol-Hessner, Peter and Steinkamp, Simon R. and Tashjian, Sarah M. and Thirion, Bertrand and Thorp, John N. and {Tinghög}, Gustav and Tisdall, Loreen and Tompson, Steven H. and Toro-Serey, Claudio and Torre Tresols, Juan Jesus and Tozzi, Leonardo and Truong, Vuong and Turella, Luca and {van {\textquoteleft}t Veer}, Anna E. and Verguts, Tom and Vettel, Jean M. and Vijayarajah, Sagana and Vo, Khoi and Wall, Matthew B. and Weeda, Wouter D. and Weis, Susanne and White, David J. and Wisniewski, David and Xifra-Porxas, Alba and Yearling, Emily A. and Yoon, Sangsuk and Yuan, Rui and Yuen, Kenneth S. L. and Zhang, Lei and Zhang, Xu and Zosky, Joshua E. and Nichols, Thomas E. and Poldrack, Russell A. and Schonberg, Tom},
+	year = {2020},
+	month = {06},
+	date = {2020-06},
+	journal = {Nature},
+	pages = {84--88},
+	volume = {582},
+	number = {7810},
+	doi = {10.1038/s41586-020-2314-9},
+	url = {https://www.nature.com/articles/s41586-020-2314-9},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{gould2025,
+	title = {Same data, different analysts: variation in effect sizes due to analytical decisions in ecology and evolutionary biology},
+	author = {Gould, Elliot and Fraser, Hannah S. and Parker, Timothy H. and Nakagawa, Shinichi and Griffith, Simon C. and Vesk, Peter A. and Fidler, Fiona and Hamilton, Daniel G. and Abbey-Lee, Robin N. and Abbott, Jessica K. and Aguirre, Luis A. and Alcaraz, Carles and Aloni, Irith and Altschul, Drew and Arekar, Kunal and Atkins, Jeff W. and Atkinson, Joe and Baker, Christopher M. and Barrett, Meghan and Bell, Kristian and Bello, Suleiman Kehinde and {Beltrán}, {Iván} and Berauer, Bernd J. and Bertram, Michael Grant and Billman, Peter D. and Blake, Charlie K. and Blake, Shannon and Bliard, Louis and Bonisoli-Alquati, Andrea and Bonnet, {Timothée} and Bordes, Camille Nina Marion and Bose, Aneesh P. H. and Botterill-James, Thomas and Boyd, Melissa Anna and Boyle, Sarah A. and Bradfer-Lawrence, Tom and Bradham, Jennifer and Brand, Jack A. and Brengdahl, Martin I. and Bulla, Martin and {Bussière}, Luc and Camerlenghi, Ettore and Campbell, Sara E. and Campos, Leonardo L. F. and Caravaggi, Anthony and Cardoso, Pedro and Carroll, Charles J. W. and Catanach, Therese A. and Chen, Xuan and Chik, Heung Ying Janet and Choy, Emily Sarah and Christie, Alec Philip and Chuang, Angela and Chunco, Amanda J. and Clark, Bethany L. and Contina, Andrea and Covernton, Garth A. and Cox, Murray P. and Cressman, Kimberly A. and Crotti, Marco and Crouch, Connor Davidson and {D{\textquoteright}Amelio}, Pietro B. and de Sousa, Alexandra Allison and {Döbert}, Timm Fabian and Dobler, Ralph and Dobson, Adam J. and Doherty, Tim S. and Drobniak, Szymon Marian and Duffy, Alexandra Grace and Duncan, Alison B. and Dunn, Robert P. and Dunning, Jamie and Dutta, Trishna and Eberhart-Hertel, Luke and Elmore, Jared Alan and Elsherif, Mahmoud Medhat and English, Holly M. and Ensminger, David C. and Ernst, Ulrich Rainer and Ferguson, Stephen M. and Fernandez-Juricic, Esteban and Ferreira-Arruda, Thalita and Fieberg, John and Finch, Elizabeth A. and Fiorenza, Evan A. and Fisher, David N. and Fontaine, {Amélie} and Forstmeier, Wolfgang and Fourcade, Yoan and Frank, Graham S. and Freund, Cathryn A. and Fuentes-Lillo, Eduardo and Gandy, Sara L. and Gannon, Dustin G. and {García-Cervigón}, Ana I. and Garretson, Alexis C. and Ge, Xuezhen and Geary, William L. and {Géron}, Charly and Gilles, Marc and Girndt, Antje and Gliksman, Daniel and Goldspiel, Harrison B. and Gomes, Dylan G. E. and Good, Megan Kate and Goslee, Sarah C. and Gosnell, J. Stephen and Grames, Eliza M. and Gratton, Paolo and Grebe, Nicholas M. and Greenler, Skye M. and Griffioen, Maaike and Griffith, Daniel M. and Griffith, Frances J. and Grossman, Jake J. and {Güncan}, Ali and Haesen, Stef and Hagan, James G. and Hager, Heather A. and Harris, Jonathan Philo and Harrison, Natasha Dean and Hasnain, Sarah Syedia and Havird, Justin Chase and Heaton, Andrew J. and Herrera-Chaustre, {María Laura} and Howard, Tanner J. and Hsu, Bin-Yan and Iannarilli, Fabiola and Iranzo, Esperanza C. and Iverson, Erik N. K. and Jimoh, Saheed Olaide and Johnson, Douglas H. and Johnsson, Martin and Jorna, Jesse and Jucker, Tommaso and Jung, Martin and {Ka{\v{c}}ergyt{\.{e}}}, Ineta and Kaltz, Oliver and Ke, Alison and Kelly, Clint D. and Keogan, Katharine and Keppeler, Friedrich Wolfgang and Killion, Alexander K. and Kim, Dongmin and Kochan, David P. and Korsten, Peter and Kothari, Shan and Kuppler, Jonas and Kusch, Jillian M. and Lagisz, Malgorzata and Lalla, Kristen Marianne and Larkin, Daniel J. and Larson, Courtney L. and Lauck, Katherine S. and Lauterbur, M. Elise and Law, Alan and {Léandri-Breton}, Don-Jean and Lembrechts, Jonas J. and {L{\textquoteright}Herpiniere}, Kiara and Lievens, Eva J. P. and de Lima, Daniela Oliveira and Lindsay, Shane and Luquet, Martin and MacLeod, Ross and Macphie, Kirsty H. and Magellan, Kit and Mair, Magdalena M. and Malm, Lisa E. and Mammola, Stefano and Mandeville, Caitlin P. and Manhart, Michael and Manrique-Garzon, Laura Milena and {Mäntylä}, Elina and Marchand, Philippe and Marshall, Benjamin Michael and Martin, Charles A. and Martin, Dominic Andreas and Martin, Jake Mitchell and Martinig, April Robin and McCallum, Erin S. and McCauley, Mark and McNew, Sabrina M. and Meiners, Scott J. and Merkling, Thomas and Michelangeli, Marcus and Moiron, Maria and Moreira, Bruno and Mortensen, Jennifer and Mos, Benjamin and Muraina, Taofeek Olatunbosun and Murphy, Penelope Wrenn and Nelli, Luca and {Niemelä}, Petri and Nightingale, Josh and Nilsonne, Gustav and Nolazco, Sergio and Nooten, Sabine S. and Novotny, Jessie Lanterman and Olin, Agnes Birgitta and Organ, Chris L. and Ostevik, Kate L. and Palacio, Facundo Xavier and Paquet, Matthieu and Parker, Darren James and Pascall, David J. and Pasquarella, Valerie J. and Paterson, John Harold and Payo-Payo, Ana and Pedersen, Karen Marie and Perez, {Grégoire} and Perry, Kayla I. and Pottier, Patrice and Proulx, Michael J. and Proulx, {Raphaël} and Pruett, Jessica L. and Ramananjato, Veronarindra and Randimbiarison, Finaritra Tolotra and Razafindratsima, Onja H. and Rennison, Diana J. and Riva, Federico and Riyahi, Sepand and Roast, Michael James and Rocha, Felipe Pereira and Roche, Dominique G. and {Román-Palacios}, Cristian and Rosenberg, Michael S. and Ross, Jessica and Rowland, Freya E. and Rugemalila, Deusdedith and Russell, Avery L. and Ruuskanen, Suvi and Saccone, Patrick and Sadeh, Asaf and Salazar, Stephen M. and Sales, Kris and {Salmón}, Pablo and {Sánchez-Tójar}, Alfredo and Santos, Leticia Pereira and Santostefano, Francesca and Schilling, Hayden T. and Schmidt, Marcus and Schmoll, Tim and Schneider, Adam C. and Schrock, Allie E. and Schroeder, Julia and Schtickzelle, Nicolas and Schultz, Nick L. and Scott, Drew A. and Scroggie, Michael Peter and Shapiro, Julie Teresa and Sharma, Nitika and Shearer, Caroline L. and {Simón}, Diego and Sitvarin, Michael I. and Skupien, {Fabrício Luiz} and Slinn, Heather Lea and Smith, Grania Polly and Smith, Jeremy A. and Sollmann, Rahel and Whitney, Kaitlin Stack and Still, Shannon Michael and Stuber, Erica F. and Sutton, Guy F. and Swallow, Ben and Taff, Conor Claverie and Takola, Elina and Tanentzap, Andrew J. and Tarjuelo, {Rocío} and Telford, Richard J. and Thawley, Christopher J. and Thierry, Hugo and Thomson, Jacqueline and Tidau, Svenja and Tompkins, Emily M. and Tortorelli, Claire Marie and Trlica, Andrew and Turnell, Biz R. and Urban, Lara and Van de Vondel, Stijn and van der Wal, Jessica Eva Megan and Van Eeckhoven, Jens and van Oordt, Francis and Vanderwel, K. Michelle and Vanderwel, Mark C. and Vanderwolf, Karen J. and {Vélez}, Juliana and Vergara-Florez, Diana Carolina and Verrelli, Brian C. and Vieira, {Marcus Vinícius} and Villamil, Nora and Vitali, Valerio and Vollering, Julien and Walker, Jeffrey and Walker, Xanthe J. and Walter, Jonathan A. and Waryszak, Pawel and Weaver, Ryan J. and {Wedegärtner}, Ronja E. M. and Weller, Daniel L. and Whelan, Shannon},
+	year = {2025},
+	month = {02},
+	date = {2025-02-06},
+	journal = {BMC Biology},
+	pages = {35},
+	volume = {23},
+	number = {1},
+	doi = {10.1186/s12915-024-02101-x},
+	url = {https://doi.org/10.1186/s12915-024-02101-x}
+}
